[package]
name = "simple-bitcoin-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["macros"] }
bdk = { version = "0.29.0", features = ["sqlite"] }
dotenv = "0.15.0"
fedimint-tonic-lnd = "0.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
# tonic_lnd = "0.5.1"
